// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render multiple expenses summary properly 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    $1,141.95
     
  </p>
</div>
`;

exports[`Should render single expense summary properly 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $1.95
     
  </p>
</div>
`;
